--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,7 +6,7 @@
       "skipLibCheck": true,
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
-      "strict": true,
+      "strict": false,
       "module": "esnext",
       "moduleResolution": "node",
       "resolveJsonModule": true,
