--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.3",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material": "^5.15.12",
     "@mui/x-data-grid-generator": "^6.18.6",
     "@mui/x-data-grid-pro": "^6.18.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,10 +17,15 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "axios": "^1.6.5",
+    "antd": "^5.14.0",
+    "axios": "^1.6.7",
     "framer-motion": "^10.16.16",
+    "gapi-script": "^1.2.0",
+    "google-auth-library": "^9.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-hook-form": "^7.51.0",
     "react-scripts": "5.0.1",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
@@ -49,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "react-router-dom": "^6.22.3"
   }
 }
