--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.12",
     "@mui/x-data-grid-generator": "^6.18.6",
     "@mui/x-data-grid-pro": "^6.18.6",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,11 +26,12 @@
     "framer-motion": "^10.16.16",
     "gapi-script": "^1.2.0",
     "google-auth-library": "^9.6.3",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.51.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
