--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
-FROM node:alpine
+FROM node:21.5.0-alpine
 # Install project dependencies
+WORKDIR /usr/app
 RUN npm install
 # Run default command
 CMD ["npm", "start"]
